WIP got past JAXB & related errors
The whole change set is still a giant mess, but oh well. Will clean up
later.